<resources>
    <string name="app_name">TICTACTOE</string>
    <string name="action_settings">Settings</string>
    <string name="nuevaP">NEW GAME</string>
    <string name="nueva">NEW GAME</string>
    <string name="score">Score</string>
    <string name="p2">Player O:</string>
    <string name="p1">Player X</string>
    <string name="p3">Player X:</string>
    <string name="inicial">0</string>
    <string name="titulo">TIC-TAC-TOE</string>
    <string name="salir">Exit</string>
    <string name="fin">END OF GAME</string>
    <string name="ini">NEW GAME</string>
    <string name="tagNom1">Player X name</string>
    <string name="tagNom2">Player O name</string>
    <string name="enviar">START GAME</string>
    <string name="music">music:</string>
    <string name="ok">OK</string>
</resources>
