<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.juli.tateti.PantallaSalida"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="#b687637c">

    <TextView
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:text="@string/fin"
        android:id="@+id/salir"
        android:textAlignment="gravity"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:textStyle="bold"
        android:theme="@style/Base.AlertDialog.AppCompat.Light" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/p3"
        android:id="@+id/j1"
        android:layout_weight="0.17"
        android:textColor="#e7d6d6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/s1"
        android:layout_gravity="right"
        android:layout_weight="0.17" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/p2"
        android:id="@+id/j2"
        android:layout_weight="0.17"
        android:textColor="#e7d6d6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/s2"
        android:layout_gravity="right"
        android:layout_weight="0.17" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:background="#ffffff"
        android:textColor="#876e6e" />


</LinearLayout>
